--- a/elasticache/elasticache/pom.xml
+++ b/elasticache/elasticache/pom.xml
@@ -14,6 +14,23 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+	  <source>1.7</source>
+	  <target>1.7</target>
+          <verbose>true</verbose>
+          <fork>true</fork>
+          <compilerVersion>1.7</compilerVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
